--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-<h1>Hello friends of Jessie! <3</h1>
+<html> 
+  <head>
+    <title>Hello World</title> 
+    <link rel = 'stylesheet' type='text/css' href = 'style.css'>
+    
+  </head>
+
+  <body> 
+    <script src="js.js"></script>
+    <div class="BIGall">
+      <p1>Harohrieolghvrueilahgrlowahgrueilhglerahfeuwilhfewigfbewuilfh154678293102orhifeuwkfbwarkil</p1>
+      <div class='text-wrap-left'>
+      <p>tyui12345678909876543vyui</p>
+    </div>
+      <div class = 'all'>   
+    <div class="buttongroup">
+      <button class="about" id = 'about' onclick="window.location.href='about.html';"> <img src="asset/about.png"> </button>
+      <button class="about" id = 'project' onclick="window.location.href='project.html';"> <img src="asset/project.png"> </button>
+      <button class="about" id = 'story' onclick="window.location.href='story.html';"> <img src="asset/story.png"> </button>
+    </div>
+    </div>
+
+    <img class = 'BG' id = 'BG' src="asset/jess portfoio BG .jpg">
+
+    <div class = 'all'>
+    <div class="buttongroup">
+      <button class="about" id = 'reading' onclick="window.location.href='reading.html';"> <img src="asset/reading.png"> </button>
+      <button class="about" id = 'watching' onclick="window.location.href='watching.html';"> <img src="asset/watching.png"> </button>
+      <button class="about" id = 'fun' onclick="window.location.href='fun.html';"> <img src="asset/fun.png"> </button>
+    </div>
+  </div>
+</div>
+  
+  </div>
+    
+  </body>
+</html>
