--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <body> 
     <script src="js.js"></script>
     <div class="BIGall">
-      <p1>Harohrieolghvrueilahgrlowahgrueilhglerahfeuwilhfewigfbewuilfh154678293102orhifeuwkfbwarkil</p1>
+      <p1>Hi guys welcome to my playground</p1>
       <div class='text-wrap-left'>
-      <p>tyui12345678909876543vyui</p>
+      <p>Practcing html by building this website, feel good to be back coding. (all the illustrations are drawn by me hehe)</p>
     </div>
       <div class = 'all'>   
     <div class="buttongroup">
