--- a/index.html
+++ b/index.html
@@ -10,12 +10,26 @@
     <div class="BIGall">
       <p1>Hi guys welcome to my playground - Tranfering files from original personal website. This site is under major construction - building and updating</p1>
       <div class='text-wrap-left'>
-      <p>Practcing html by building this website, feel good to be back coding. (all the illustrations are drawn by me ❤️)</p>
+      <p>Practcing html by building this website, feel good to be back coding. (all the illustrations are drawn by me ❤️) </p>
     </div>
       <div class = 'all'>   
-    <div class="buttongroup">
+    <div class="container">
       <button class="about" id = 'about' onclick="window.location.href='about.html';"> <img src="asset/about.png"> </button>
+      <h2 class="subtext"> = </h2>
+      <button class="sub-buttom" id = 'sub-about' onclick="window.location.href='about.html';"> <img class="sub-buttom" src="asset/white-frog-silhouette-with-black-background-hi.png"> </button>
+      <h2 class="subtext"> + </h2>
+      <ul class="sublist">
+        <li>Am not a human</li>
+        <a>haha</a>
+        <li>Love humans</li>
+        <li>Ran Ultramarathon</li>
+        <li>Recovering my knees now</li>
+        <li>Visualizing Math, but cannot deal with geometry</li>
+        <li>One mathematician called me boring bc of that</li>
+      </ul>
+      <p>: Jessie</p>
       <button class="about" id = 'project' onclick="window.location.href='project.html';"> <img src="asset/project.png"> </button>
+      <p onclick="window.location.href='about.html';"> hihi</p>
       <button class="about" id = 'story' onclick="window.location.href='story.html';"> <img src="asset/story.png"> </button>
     </div>
     </div>
