--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body> 
-    <script src="js.js"></script>
+    
     <div class="BIGall">
       <p1>Hi guys welcome to my playground - Tranfering files from original personal website. This site is under major construction - building and updating</p1>
       <div class='text-wrap-left'>
@@ -19,13 +19,25 @@
       <button class="sub-buttom" id = 'sub-about' onclick="window.location.href='about.html';"> <img class="sub-buttom" src="asset/white-frog-silhouette-with-black-background-hi.png"> </button>
       <h2 class="subtext"> + </h2>
       <ul class="sublist">
-        <li>Am not a human</li>
+        <li>Am not a human, I am <img src="asset/white-frog-silhouette-with-black-background-hi.png" style="width:100%;max-width:30px"></li>
         <a>haha</a>
         <li>Love humans</li>
         <li>Ran Ultramarathon</li>
         <li>Recovering my knees now</li>
         <li>Visualizing Math, but cannot deal with geometry</li>
-        <li>One mathematician called me boring bc of that</li>
+        <li>One mathematician called me boring bc of me finding this book:<img id="myImg" src="asset/48809034.jpg" alt="Snow" style="width:100%;max-width:30px"> boring</li>
+**
+
+
+
+<div id="myModal" class="modal">
+  <span class="close">&times;</span>
+  <img class="modal-content" id="img01" >
+  <div id="caption"></div>
+</div>
+
+
+**
       </ul>
       <p>: Jessie</p>
       <button class="about" id = 'project' onclick="window.location.href='project.html';"> <img src="asset/project.png"> </button>
@@ -46,6 +58,6 @@
 </div>
   
   </div>
-    
+  <script src="js.js"></script>
   </body>
 </html>
