--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="BIGall">
       <p1>Hi guys welcome to my playground - Tranfering files from original personal website. This site is under major construction - building and updating</p1>
       <div class='text-wrap-left'>
-      <p>Practcing html by building this website, feel good to be back coding. (all the illustrations are drawn by me ❤️) </p>
+      <p>Practcing html by building this website(all the illustrations are drawn by me ❤️) </p>
     </div>
       <div class = 'all'>   
     <div class="container">
