--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
         <h2>Current Personal Project (In Process):</h2>
         <h3>Advanced Education:</h3>
             <ul>
-            <li><a href="#artwork3">Understnading Tate Shaveravich's Paper and generate visulization of the math concept</a></li>
+            <li><a href="https://projecteuclid.org/journals/experimental-mathematics/volume-9/issue-1/Visualizing-elements-in-the-Shafarevich-Tate-group/em/1046889588.full">Understnading Tate Shaveravich's Paper and generate visulization of the math concept</a></li>
             </ul>
         <h3>Youth Education: </h3>
             <ul>
-            <li><a href="#artwork3">Making Picture Book about boundaries (character development)</a></li>
-            <li><a href="#artwork3">Writing Book about risks - Balancing on the Edge </a></li>
+            <li>Making Picture Book about boundaries (character development)</li>
+            <li>Writing Book about risks - Balancing on the Edge </li>
         </ul>
     </section>
     <section id="fav books">
