--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Artwork Gallery</title>
 </head>
 <body>
-    <p>Hi I'm Jessie, welcome to my project library. I'm an artist interested in mathematics, science, storytelling, and communication. Experimenting different ways and mediums to combine these interest and collaorat ewith people from different fieelds to make meanignful art. My goal is to make this world a better place by spreading inspirations and loves.</p>
+    <p>Hi, I'm Jessie. Welcome to my project library. I'm an artist who is passionate about mathematics, science, storytelling, and communication. I enjoy experimenting with different methods and mediums to combine these interests and collaborate with people from various fields to create meaningful art. My goal is to make the world a better place by spreading inspiration and love.</p>
     <h1>Projects Library</h1>
     <h2>Writings:</h2>
     <h3>Art Meet STEM:</h3>
