--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <p>Hi, I'm Jessie. Welcome to my project library. <br>I'm an artist who is passionate about mathematics, science, storytelling, and communication. <br>
         I enjoy experimenting with different methods and mediums to combine these interests and collaborate with people from various fields to create meaningful art. <br>
-        My goal is to make the world a better place by spreading inspiration and love.</p>
+        My goal is to make the world a better place by spreading inspiration and love, with the connections of STEM and Art.</p>
     <h1>Projects Library</h1>
     <h2>Writings:</h2>
     <h3>Art Meet STEM:</h3>
