--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         </ul>
         <h3>Tech x Art:</h3>
-        <p>Communication:</p>
+        <p>Alternate Communication:</p>
         <ul>
             <li><a href="https://drive.google.com/drive/folders/1hsuE7-SrIIA36oT9l55lVyFTPIsu1rnj">Pluvialis --- Brainwave x Water x Human body Installation</a></li>
             <li><a href="https://drive.google.com/drive/folders/1eX5q2d-CUE7ANmUtEuxyFI_fHsMLDYqu?usp=sharing">Cipher --- Glove-Keyboard Interface</a></li>
