--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Artwork Gallery</title>
 </head>
 <body>
-    <p>Hi, I'm Jessie. Welcome to my project library. <br>I'm an artist who is passionate about mathematics, science, storytelling, and communication. <br>
+    <p>Hi, I'm Jessie. Welcome to my project library. <br>I'm an artist who is passionate about technology, mathematics, science, storytelling, and communication. <br>
         I enjoy experimenting with different methods and mediums to combine these interests and collaborate with people from various fields to create meaningful art. <br>
         My goal is to make the world a better place by spreading inspiration and love, with the connections of STEM and Art.</p>
     <h1>Projects Library</h1>
