--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2>Writings:</h2>
     <h3>Art Meet STEM:</h3>
     <ul>
-        <li><a href="https://docs.google.com/document/d/1kLBaOhc8W3TAQoYQDhhPuuromTd0tTRxGgDoPOlcUK0">Envisioning the Improvement of Communication</a></li>
+        <li><a href="https://docs.google.com/document/">Envisioning the Improvement of Communication</a></li>
         <li><a href="https://docs.google.com/document/d/1JKPUK-b4OuXJgd10wPd36MWVpdsA_gFPn6SMzUpNwpg/edit?usp=sharing">Math Meets Art: The Hidden Pattern of Beauty - The MET Journal</a></li>
         
     </ul>
