--- a/index.html
+++ b/index.html
@@ -113,6 +113,14 @@
         </ul>
     </section>
     <p>✴︎</p>
+    <p>✴︎</p>
+    <section id="quote">
+        <h2>Amazing artist x inventors:</h2>
+        <h3>Samul Morse:</h3>
+        <ul>
+            Yes, he's the one invented Morse Code. Morse painted "The Gallery of the Louvre" (<a href="https://www.seattleartmuseum.org/exhibitions/morse">The Painting</a>), starting as being a painter. 
+        </ul>
+    </section>
 
   
 </body>
