--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <p>✴︎</p>
     <p>✴︎</p>
     <section id="quote">
-        <h2>Amazing artist x inventors:</h2>
+        <h2>Amazing artists x inventors:</h2>
         <h3>Samul Morse:</h3>
         <ul>
             Yes, he's the one invented Morse Code. Morse painted "The Gallery of the Louvre" (<a href="https://www.seattleartmuseum.org/exhibitions/morse">The Painting</a>), starting as being a painter. 
