--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <h2>Amazing artists x inventors:</h2>
         <h3>Samul Morse:</h3>
         <ul>
-            Yes, he's the one invented Morse Code. Morse painted "The Gallery of the Louvre" (<a href="https://www.seattleartmuseum.org/exhibitions/morse">The Painting</a>), starting as being a painter. 
+            Yes, he's the one invented Morse Code. Morse painted "The Gallery of the Louvre" (<a href="https://www.nga.gov/audio-video/press/3404-remarks-mp3.html">The Painting</a>), starting as being a painter. 
         </ul>
     </section>
 
