--- a/index.html
+++ b/index.html
@@ -127,7 +127,10 @@
         <h2>Amazing artists x inventors:</h2>
         <h3>Samul Morse:</h3>
         <ul>
-            Yes, he's the one invented Morse Code. Morse painted "The Gallery of the Louvre" (<a href="https://www.nga.gov/audio-video/press/3404-remarks-mp3.html">The Painting</a>), starting as being a painter. 
+            I literally just discovered. Just, I mean Jan 24, 2024, that Samual Morse, the guy who invented Morse code, started off as a painter and painted one of my favorite paintings:
+            "The Gallery of the Louvre" (<a href="https://www.nga.gov/audio-video/press/3404-remarks-mp3.html">The Painting</a>). 
+
+            It's very emotional to find this out, very joyful.
         </ul>
     </section>
 
