--- a/index.html
+++ b/index.html
@@ -131,6 +131,11 @@
             "The Gallery of the Louvre" (<a href="https://www.nga.gov/audio-video/press/3404-remarks-mp3.html">The Painting</a>). 
 
             It's very emotional to find this out, very joyful.
+
+            Beautiful and clear tree graph showing how "long" it takes to send a character:
+            <img src="assett/morse-tree.png" alt="tree" width="500" height="600">
+            
+            <img src="assett/morse-table.png" alt="diagram" width="500" height="600">
         </ul>
     </section>
 
