--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
             I literally just discovered. Just, I mean Jan 24, 2024, that Samual Morse, the guy who invented Morse code, started off as a painter and painted one of my favorite paintings:
             "The Gallery of the Louvre" (<a href="https://www.nga.gov/audio-video/press/3404-remarks-mp3.html">The Painting</a>). 
 
-            It's very emotional to find this out, very joyful. My work - Cipher is inspired by Morse Code. 
-<br>
+            It's very emotional to find this out, very joyful. My work - Cipher is inspired by Morse Code. <br>
             Beautiful and clear tree graph showing how "long" it takes to send a character:
+            <br>
             <img src="assett/morse-tree.png" alt="tree" width="300" height="200">
             <img src="assett/morse-table.png" alt="diagram" width="200" height="300">
         </ul>
