--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             I literally just discovered. Just, I mean Jan 24, 2024, that Samual Morse, the guy who invented Morse code, started off as a painter and painted one of my favorite paintings:
             "The Gallery of the Louvre" (<a href="https://www.nga.gov/audio-video/press/3404-remarks-mp3.html">The Painting</a>). 
 
-            It's very emotional to find this out, very joyful. My work - <a herf="https://drive.google.com/file/d/1RUYfQc4CSEMZTD8hAoVTBRgaCdfT9-mN/view?usp=sharing">Cipher</a>, which I created in 2021, is inspired by Morse Code. 
+            It's very emotional to find this out, very joyful. My work - <a href="https://drive.google.com/file/d/1RUYfQc4CSEMZTD8hAoVTBRgaCdfT9-mN/view?usp=sharing">Cipher</a>, which I created in 2021, is inspired by Morse Code. 
             <br>
             <p>         </p>
             Beautiful and clear tree graph showing how "long" it takes to send a character:
