--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
     <p>Hi, I'm Jessie. Welcome to my project library. <br>I'm an artist who is passionate about technology, mathematics, science, storytelling, and communication. <br>
         I enjoy experimenting with different methods and mediums to combine these interests and collaborate with people from various fields to create meaningful art. <br>
-        My goal is to make the world a better place by spreading inspiration and love, with the connections of STEM and Art.</p>
+        My goal is to enrich the world with inspiration and love <br>
+        (much like how Miyazaki's animations impart warmth and insight across various cultures through their enthralling visuals, music, and narratives),<br>
+        and to foster communication and expression that transcend the barriers of language, culture, and community. </p>
     <h1>Projects Library</h1>
     <h2>Writings:</h2>
     <h3>Art Meet STEM:</h3>
