--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Artwork Gallery</title>
 </head>
 <body>
-    <p>Hi, I'm Jessie. Welcome to my project library. <br>I'm an artist who is passionate about technology, mathematics, science, storytelling, and communication. <br>
-        I enjoy experimenting with different methods and mediums to combine these interests and collaborate with people from various fields to create meaningful art. <br>
-        My goal is to enrich the world with inspiration and love <br>
+    <p>Hi, I'm Jessie. I'm an artist who is passionate about technology, mathematics, science, storytelling, and communication. <br>
+        I enjoy experimenting with different methods and mediums to combine these interests and collaborate with people from various fields, especially those from STEM, to create meaningful art. <br>
+        My goal is to enrich the world with inspiration and love ❤ 
         (much like how Miyazaki's animations impart warmth and insight across various cultures through their enthralling visuals, music, and narratives),<br>
         and to foster communication and expression that transcend the barriers of language, culture, and community. </p>
     <h1>Projects Library</h1>
