--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <h2>Amazing artists x inventors:</h2>
         <h3>Samul Morse:</h3>
         <ul>
-            I literally just discovered. Just, I mean Jan 24, 2024, that Samual Morse, the guy who invented Morse code, started off as a painter and painted one of my favorite paintings:
+            I literally just discovered. Just, I mean Jan 2024, that Samual Morse, the guy who invented Morse code, started off as a painter and painted one of my favorite paintings:
             "The Gallery of the Louvre" (<a href="https://www.nga.gov/audio-video/press/3404-remarks-mp3.html">The Painting</a>). 
 
             It's very emotional to find this out, very joyful. My work - <a href="https://drive.google.com/file/d/1RUYfQc4CSEMZTD8hAoVTBRgaCdfT9-mN/view?usp=sharing">Cipher</a>, which I created in 2021, is inspired by Morse Code. 
