--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
             <li><a href="https://drive.google.com/drive/folders/15Dh-jdng2QchRTKidJ4_mKYEqM7NAswl?usp=sharing">Ceramics/Scupture</a></li>
             <li><a href="https://drive.google.com/file/d/1SqVM5ksAc031UjwLxiQpIrIg7tYUvUQX/view?usp=sharing">Short Film: Inner Journey</a></li>
             <li><a href="https://drive.google.com/file/d/1-L1PRZoin-Koq4R33IHNnTIk9zFBg7PY/view?usp=sharing">3D sculpture programming: Imaginary Palace</a></li>    
-            <li><a href="#artwork3">Photography (Film + Installation)</a></li>
+            <li><a href="https://docs.google.com/presentation/d/1C2JC_QGqf3i53L1m4YHTEKC8BCT5E5spd_D7KArlTIQ/edit?usp=sharing">Photography (Film + Installation)</a></li>
             <li><a href="#artwork3">Photography (Digital)</a></li>
+            
 
         </ul>
         <h3>Tech x Art:</h3>
