--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
      <section id="interesting clips">
         <h2>Videos I've Watched that's very cool (that I learnt a lot from):</h2>
         <ul>
-            <li><a herf="https://www.youtube.com/watch?v=BtaVq2g17G0&ab_channel=MITOpenCourseWare">Information and Entropy</a></li>
-            <li><a herf="https://www.youtube.com/watch?v=P6FORpg0KVo&ab_channel=TED">Great speech presentation skills and flow management: How to Make Learning as Addictive as Social Media | Luis Von Ahn | TED</a></li>
+            <li><a href="https://www.youtube.com/watch?v=BtaVq2g17G0&ab_channel=MITOpenCourseWare">Information and Entropy</a></li>
+            <li><a href="https://www.youtube.com/watch?v=P6FORpg0KVo&ab_channel=TED">Great speech presentation skills and flow management: How to Make Learning as Addictive as Social Media | Luis Von Ahn | TED</a></li>
         </ul>
     </section>
     <p>✴︎</p>
