--- a/index.html
+++ b/index.html
@@ -83,9 +83,10 @@
     </section>
     <p>✴︎</p>
     <section id="fav books">
-        <h2>Books I'm Reading:</h2>
+        <h2>Books/Articles I'm Reading:</h2>
         <ul>
             <li><a href="https://pure.mpg.de/rest/items/item_2383164/component/file_2383163/content">The Mathematical Theory of Communication - Claude E. Shannon</a></li>
+            <li><a href="https://pages.cs.wisc.edu/~rist/642-spring-2014/shannon-secrecy.pdf"> Communication of Secrecy Systems </a></li>
             <li><a href="https://www.feynmanlectures.caltech.edu/">Feynman Lectures on Physics</a></li>
             <li><a href="https://www.gornahoor.net/library/Halmos_NaiveSetTheory.pdf">Naive set theory - Halmos, Paul R.</a></li>
             <li><a href="https://plato.stanford.edu/entries/russell-paradox/">Russell Paradox</a></li>
